Spring Boot Microservices 06 - Moving token to a separate module

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <modules>
         <module>core</module>
         <module>course</module>
+        <module>token</module>
     </modules>
 
     <dependencies>
